--- a/ADHD_Diagnosis.ipynb
+++ b/ADHD_Diagnosis.ipynb
@@ -1196,7 +1196,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['preuniversity_symptomatic_yes', 'bdi1_item_1', 'bdi1_item_2', 'bdi1_item_3', 'bdi1_item_4', 'bdi1_item_5', 'bdi1_item_6', 'bdi1_item_7', 'bdi1_item_8', 'bdi1_item_9', 'bdi1_item_10', 'bdi1_item_11', 'bdi1_item_12', 'bdi1_item_13', 'bdi1_item_14', 'bdi1_item_15', 'bdi1_item_16', 'bdi1_item_17', 'bdi1_item_18', 'bdi1_item_19', 'bdi1_item_20', 'bdi1_item_21', 'audit1_item_1', 'audit1_item_2', 'audit1_item_3', 'audit1_item_4', 'audit1_item_5', 'audit1_item_6', 'audit1_item_7', 'audit1_item_8', 'audit1_item_9', 'asrs1_item_1', 'asrs1_item_2', 'asrs1_item_3', 'asrs1_item_4', 'asrs1_item_5', 'asrs1_item_6', 'asrs1_item_7', 'asrs1_item_8', 'asrs1_item_9', 'asrs1_item_10', 'asrs1_item_11', 'asrs1_item_12', 'asrs1_item_13', 'asrs1_item_14', 'asrs1_item_15', 'asrs1_item_16', 'asrs1_item_17', 'asrs1_item_18', 'bai1_item_1', 'bai1_item_2', 'bai1_item_3', 'bai1_item_4', 'bai1_item_5', 'bai1_item_6', 'bai1_item_7', 'bai1_item_8', 'bai1_item_9', 'bai1_item_10', 'bai1_item_11', 'bai1_item_12', 'bai1_item_13', 'bai1_item_14', 'bai1_item_15', 'bai1_item_16', 'bai1_item_17', 'bai1_item_18', 'bai1_item_19', 'bai1_item_20', 'bai1_item_21']\n"
+      "['sex_male', 'sex_other', 'preuniversity_symptomatic_yes', 'bdi1_item_1', 'bdi1_item_2', 'bdi1_item_3', 'bdi1_item_4', 'bdi1_item_5', 'bdi1_item_6', 'bdi1_item_7', 'bdi1_item_8', 'bdi1_item_9', 'bdi1_item_10', 'bdi1_item_11', 'bdi1_item_12', 'bdi1_item_13', 'bdi1_item_14', 'bdi1_item_15', 'bdi1_item_16', 'bdi1_item_17', 'bdi1_item_18', 'bdi1_item_19', 'bdi1_item_20', 'bdi1_item_21', 'audit1_item_1', 'audit1_item_2', 'audit1_item_3', 'audit1_item_4', 'audit1_item_5', 'audit1_item_6', 'audit1_item_7', 'audit1_item_8', 'audit1_item_9', 'asrs1_item_1', 'asrs1_item_2', 'asrs1_item_3', 'asrs1_item_4', 'asrs1_item_5', 'asrs1_item_6', 'asrs1_item_7', 'asrs1_item_8', 'asrs1_item_9', 'asrs1_item_10', 'asrs1_item_11', 'asrs1_item_12', 'asrs1_item_13', 'asrs1_item_14', 'asrs1_item_15', 'asrs1_item_16', 'asrs1_item_17', 'asrs1_item_18', 'bai1_item_1', 'bai1_item_2', 'bai1_item_3', 'bai1_item_4', 'bai1_item_5', 'bai1_item_6', 'bai1_item_7', 'bai1_item_8', 'bai1_item_9', 'bai1_item_10', 'bai1_item_11', 'bai1_item_12', 'bai1_item_13', 'bai1_item_14', 'bai1_item_15', 'bai1_item_16', 'bai1_item_17', 'bai1_item_18', 'bai1_item_19', 'bai1_item_20', 'bai1_item_21']\n"
      ]
     }
    ],
@@ -1246,8 +1246,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(404, 70)\n",
-      "(102, 70)\n"
+      "(404, 72)\n",
+      "(102, 72)\n"
      ]
     }
    ],
@@ -1261,7 +1261,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "92b451f5",
+   "id": "e8e116e4",
    "metadata": {},
    "outputs": [
     {
@@ -1280,7 +1280,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "5289e451",
+   "id": "6b00c770",
    "metadata": {},
    "outputs": [
     {
@@ -1301,16 +1301,16 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "26a2e653",
+   "id": "a53b5289",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 0, 1, 1, 1, 0, 1, 0, 0, 2, 0, 0, 1, 1, 1, 1, 1, 1, 0, 1, 0,\n",
-       "       0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 0, 1, 0, 0, 1, 1, 1, 0, 1, 1,\n",
+       "array([1, 0, 0, 1, 1, 1, 0, 1, 0, 0, 2, 0, 0, 1, 1, 1, 1, 1, 1, 0, 1, 0,\n",
+       "       0, 1, 1, 1, 0, 1, 1, 1, 1, 0, 0, 1, 0, 1, 0, 0, 1, 1, 1, 0, 1, 1,\n",
        "       1, 0, 0, 1, 1, 0, 1, 0, 1, 0, 0, 1, 1, 0, 0, 0, 0, 1, 0, 1, 0, 1,\n",
-       "       1, 1, 1, 0, 1, 0, 0, 0, 0, 1, 1, 0, 0, 1, 0, 1, 1, 1, 0, 0, 1, 1,\n",
+       "       1, 1, 1, 0, 1, 0, 0, 1, 0, 1, 1, 0, 0, 1, 0, 1, 1, 1, 1, 0, 1, 1,\n",
        "       1, 0, 2, 1, 0, 0, 0, 1, 0, 0, 1, 0, 1, 0], dtype=int64)"
       ]
      },
@@ -1327,22 +1327,22 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "932bafd9",
+   "id": "64a1f311",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.6 , 0.5 , 0.08, 0.87, 0.66, 0.88, 0.1 , 0.92, 0.34, 0.09, 0.28,\n",
-       "       0.19, 0.38, 0.59, 0.91, 0.94, 0.75, 0.75, 0.91, 0.16, 0.58, 0.43,\n",
-       "       0.35, 0.64, 0.91, 0.73, 0.52, 0.81, 0.72, 0.73, 0.92, 0.23, 0.35,\n",
-       "       0.76, 0.09, 0.73, 0.01, 0.35, 0.58, 0.91, 0.78, 0.18, 0.83, 0.81,\n",
-       "       0.53, 0.16, 0.04, 0.92, 0.66, 0.23, 0.98, 0.39, 0.68, 0.29, 0.32,\n",
-       "       0.57, 0.87, 0.15, 0.46, 0.28, 0.1 , 0.77, 0.02, 0.7 , 0.32, 0.61,\n",
-       "       0.96, 0.6 , 0.9 , 0.38, 0.61, 0.44, 0.11, 0.48, 0.32, 0.65, 0.87,\n",
-       "       0.39, 0.36, 0.89, 0.18, 0.78, 0.84, 0.96, 0.48, 0.35, 0.72, 0.71,\n",
-       "       0.92, 0.14, 0.2 , 0.54, 0.47, 0.46, 0.23, 0.62, 0.07, 0.06, 0.68,\n",
-       "       0.12, 0.52, 0.38])"
+       "array([0.56, 0.47, 0.08, 0.88, 0.63, 0.9 , 0.11, 0.93, 0.48, 0.07, 0.3 ,\n",
+       "       0.17, 0.38, 0.6 , 0.91, 0.94, 0.76, 0.77, 0.91, 0.17, 0.55, 0.44,\n",
+       "       0.34, 0.63, 0.91, 0.7 , 0.48, 0.87, 0.72, 0.72, 0.93, 0.21, 0.39,\n",
+       "       0.75, 0.12, 0.71, 0.01, 0.34, 0.6 , 0.95, 0.8 , 0.15, 0.84, 0.82,\n",
+       "       0.55, 0.24, 0.04, 0.94, 0.67, 0.23, 0.98, 0.38, 0.67, 0.34, 0.4 ,\n",
+       "       0.65, 0.89, 0.16, 0.48, 0.25, 0.1 , 0.79, 0.02, 0.67, 0.39, 0.64,\n",
+       "       0.87, 0.61, 0.91, 0.5 , 0.65, 0.42, 0.11, 0.54, 0.35, 0.59, 0.89,\n",
+       "       0.35, 0.32, 0.9 , 0.19, 0.75, 0.83, 0.95, 0.56, 0.33, 0.76, 0.75,\n",
+       "       0.94, 0.13, 0.21, 0.59, 0.44, 0.46, 0.24, 0.65, 0.09, 0.1 , 0.68,\n",
+       "       0.13, 0.5 , 0.35])"
       ]
      },
      "execution_count": 17,
@@ -1358,7 +1358,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "a75257a7",
+   "id": "8509c4ab",
    "metadata": {},
    "outputs": [
     {
@@ -1392,31 +1392,31 @@
        "      <th>48</th>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.598451</td>\n",
+       "      <td>0.556921</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>64</th>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.502236</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.466649</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>473</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.082684</td>\n",
+       "      <td>0.080831</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>485</th>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.873253</td>\n",
+       "      <td>0.875658</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>228</th>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.662420</td>\n",
+       "      <td>0.630357</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1428,31 +1428,31 @@
        "      <th>411</th>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.064344</td>\n",
+       "      <td>0.103446</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>300</th>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.679923</td>\n",
+       "      <td>0.682276</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>69</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.122735</td>\n",
+       "      <td>0.132272</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>73</th>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.519169</td>\n",
+       "      <td>0.500751</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>341</th>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.376706</td>\n",
+       "      <td>0.353951</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1461,17 +1461,17 @@
       ],
       "text/plain": [
        "     y_true  y_pred  probability\n",
-       "48        1       1     0.598451\n",
-       "64        1       1     0.502236\n",
-       "473       0       0     0.082684\n",
-       "485       1       1     0.873253\n",
-       "228       1       1     0.662420\n",
+       "48        1       1     0.556921\n",
+       "64        1       0     0.466649\n",
+       "473       0       0     0.080831\n",
+       "485       1       1     0.875658\n",
+       "228       1       1     0.630357\n",
        "..      ...     ...          ...\n",
-       "411       1       0     0.064344\n",
-       "300       1       1     0.679923\n",
-       "69        0       0     0.122735\n",
-       "73        0       1     0.519169\n",
-       "341       1       0     0.376706\n",
+       "411       1       0     0.103446\n",
+       "300       1       1     0.682276\n",
+       "69        0       0     0.132272\n",
+       "73        0       1     0.500751\n",
+       "341       1       0     0.353951\n",
        "\n",
        "[102 rows x 3 columns]"
       ]
@@ -1489,14 +1489,14 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "ff41c70d",
+   "id": "36926f92",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6176470588235294\n"
+      "0.6372549019607843\n"
      ]
     }
    ],
@@ -1508,7 +1508,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "008b1b0d",
+   "id": "969b0cb7",
    "metadata": {},
    "outputs": [
     {
@@ -1536,7 +1536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ad82869",
+   "id": "4a4f07f9",
    "metadata": {},
    "outputs": [],
    "source": []
